# vicars

./: .git_ignore  .gitignore  BlockData.h  CMakeLists.txt  Equations.cpp  Equations.h  Makefile  Matrix.cpp  Matrix.h  Params.h  README.md  RateState.cpp  RateState.h  Solver.cpp  Solver.h  Spline.cpp  Spline.h  main.cpp
ViCaRS.xcodeproj/: project.pbxproj
ViCaRS.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ViCaRS.xcodeproj/project.xcworkspace/xcuserdata/eheien.xcuserdatad/: UserInterfaceState.xcuserstate
ViCaRS.xcodeproj/xcuserdata/eheien.xcuserdatad/xcschemes/: ViCaRS.xcscheme  xcschememanagement.plist
